# padding-detector

./: Cargo.toml  LICENSE  README.md
data/: boilerplate.rs
examples/: simple.h
src/: cli.yaml  main.rs
