[package]
name = "struct-paddings-detector"
version = "0.1.0"
authors = ["Keiichi Watanabe <udon.watanabe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = "0.53.2"

[dependencies.syn]
version = "1.0.18"
features = ["full"]