[package]
name = "struct-paddings-detector"
version = "0.1.0"
authors = ["Keiichi Watanabe <udon.watanabe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
bindgen = "0.53.2"

[dependencies.clap]
version = "2.33.0"
features = ["yaml"]

[dependencies.syn]
version = "1.0.18"
features = ["full"]
